--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@strapi/strapi": "4.7.1",
     "@strapi/plugin-users-permissions": "4.7.1",
     "@strapi/plugin-i18n": "4.7.1",
-    "mysql": "2.18.1"
+    "better-sqlite3": "8.0.1"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "2623257c-5896-4ecc-88d3-4f8787a53998"
+    "uuid": "c90fdc4f-ac3e-49d2-aa47-d2e026200d91"
   },
   "engines": {
     "node": ">=14.19.1 <=18.x.x",
