--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:ivan": "NODE_ENV=production npm run build",
     "build:win": "cross-env NODE_ENV=production npm run build",
     "start:win": "cross-env NODE_ENV=production npm start",
-    "npm cache clean --force": "npm cache clean --force"
+    "npm cache clean --force": "npm cache clean --force",
+    "npm i": "npm i"
   },
   "dependencies": {
     "@strapi/plugin-i18n": "4.7.1",
