--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,6 @@ DATABASE_USERNAME=tobemodified
 DATABASE_PASSWORD=tobemodified
 DATABASE_SSL=false
 JWT_SECRET=tobemodified
-
+STRIPE_KEY=
+CLIENT_URL=
 
