--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.7.1",
     "@strapi/plugin-users-permissions": "4.7.1",
-    "@strapi/strapi": "4.7.1",
+    "@strapi/strapi": "^4.10.1",
     "cross-env": "^7.0.3",
-    "mysql": "2.18.1"
+    "mysql": "2.18.1",
+    "stripe": "^12.2.0"
   },
   "author": {
     "name": "A Strapi developer"
