--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "npm cache clean --force": "npm cache clean --force"
   },
   "dependencies": {
+    "@strapi/plugin-documentation": "^4.10.5",
     "@strapi/plugin-i18n": "4.7.1",
     "@strapi/plugin-users-permissions": "4.7.1",
     "@strapi/strapi": "^4.10.1",
