--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ DATABASE_USERNAME=tobemodified
 DATABASE_PASSWORD=tobemodified
 DATABASE_SSL=false
 JWT_SECRET=tobemodified
-STRIPE_KEY=
-CLIENT_URL=
+STRIPE_SECRET_KEY=your_stripe_secret_key
+FRONTEND_URL=your_frontend_url
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
 
